[gd_scene load_steps=36 format=3 uid="uid://cuokjbf8erg0p"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_erdf4"]
[ext_resource type="Script" uid="uid://dwiba42ay0xb4" path="res://addons/CustomControls/Dialogs/CommandEvents/set_weather_effects_dialog.gd" id="2_ll5j2"]
[ext_resource type="PackedScene" uid="uid://bwgf6rhx3a6cq" path="res://addons/CustomControls/custom_panel.tscn" id="3_ud8oq"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="4_thd6d"]
[ext_resource type="PackedScene" uid="uid://c6vqhgg1w1sxj" path="res://addons/CustomControls/custom_button_2.tscn" id="5_2kahn"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="5_eb6nj"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="6_a4wet"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="7_64e30"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="8_2eb1a"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="9_a2vwq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_iemuh"]

[sub_resource type="Gradient" id="Gradient_uww37"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j32f4"]
gradient = SubResource("Gradient_uww37")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fysoy"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_ctwx1"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wm07h"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fw0ys"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_wm07h")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fjtw"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="ButtonGroup" id="ButtonGroup_885ge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g38pp"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uc6i8"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wovj5"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_uc6i8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8go5"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wat8g"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="GradientTexture2D" id="GradientTexture2D_relqq"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nd4b7"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_relqq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jd5p"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iu3fr"]
texture = ExtResource("6_a4wet")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_occp0"]
texture = ExtResource("7_64e30")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n0new"]
texture = ExtResource("8_2eb1a")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wanv4"]
texture = ExtResource("9_a2vwq")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yd8hk"]
texture = ExtResource("6_a4wet")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gommh"]
texture = ExtResource("7_64e30")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_37igj"]
texture = ExtResource("8_2eb1a")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5rb3t"]
texture = ExtResource("9_a2vwq")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="SetWeatherEffectsDialog" type="Window"]
title = "Weather Effects"
position = Vector2i(0, 36)
size = Vector2i(500, 305)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
min_size = Vector2i(0, 220)
theme = ExtResource("1_erdf4")
script = ExtResource("2_ll5j2")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_iemuh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_j32f4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="OperationPanel" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ud8oq")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fysoy")
style1 = SubResource("StyleBoxFlat_fysoy")
style2 = SubResource("StyleBoxTexture_fw0ys")
style3 = SubResource("StyleBoxFlat_7fjtw")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/OperationPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OperationPanel/MarginContainer"]
layout_mode = 2

[node name="AddEffect" type="CheckBox" parent="MarginContainer/VBoxContainer/OperationPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Adds a weather scene to the current map (Weather scenes are scenes of the WeatherScene class)."
mouse_default_cursor_shape = 2
button_group = SubResource("ButtonGroup_885ge")
text = "Add Effect"

[node name="RemoveEffect" type="CheckBox" parent="MarginContainer/VBoxContainer/OperationPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Removes a previously added weather scene if it existed with the given id"
mouse_default_cursor_shape = 2
button_group = SubResource("ButtonGroup_885ge")
text = "Remove Effect"

[node name="EffectIDPanel" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ud8oq")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g38pp")
style1 = SubResource("StyleBoxFlat_g38pp")
style2 = SubResource("StyleBoxTexture_wovj5")
style3 = SubResource("StyleBoxFlat_w8go5")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/EffectIDPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EffectIDPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EffectIDPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Effect ID"

[node name="ID" parent="MarginContainer/VBoxContainer/EffectIDPanel/MarginContainer/VBoxContainer" instance=ExtResource("4_thd6d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "ID of the weather scene to be added to or removed from the current map"
min_value = 1.0
value = 1.0
allow_greater = true

[node name="WeatherScenePanel" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_ud8oq")]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wat8g")
style1 = SubResource("StyleBoxFlat_wat8g")
style2 = SubResource("StyleBoxTexture_nd4b7")
style3 = SubResource("StyleBoxFlat_1jd5p")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/WeatherScenePanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/WeatherScenePanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WeatherScenePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Weather Scene"

[node name="WeatherScene" parent="MarginContainer/VBoxContainer/WeatherScenePanel/MarginContainer/VBoxContainer" instance=ExtResource("5_2kahn")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Choose the weather scene to be added to the current map"
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_eb6nj")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/disabled = SubResource("StyleBoxTexture_iu3fr")
theme_override_styles/hover = SubResource("StyleBoxTexture_occp0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n0new")
theme_override_styles/normal = SubResource("StyleBoxTexture_wanv4")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_eb6nj")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/disabled = SubResource("StyleBoxTexture_yd8hk")
theme_override_styles/hover = SubResource("StyleBoxTexture_gommh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_37igj")
theme_override_styles/normal = SubResource("StyleBoxTexture_5rb3t")
text = "CANCEL"

[connection signal="toggled" from="MarginContainer/VBoxContainer/OperationPanel/MarginContainer/VBoxContainer/AddEffect" to="." method="_on_add_effect_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/OperationPanel/MarginContainer/VBoxContainer/RemoveEffect" to="." method="_on_remove_effect_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/WeatherScenePanel/MarginContainer/VBoxContainer/WeatherScene" to="." method="_on_weather_scene_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
